# cplusplus-projects

./: .gitignore  README.org
CS110B/: .gitignore  CMakeLists.txt
CS110B/app/: a1.cpp  a9.cpp
cmake/best-practices/chapter3/: CMakeLists.txt
cmake/best-practices/chapter3/header_only/: CMakeLists.txt
cmake/best-practices/chapter3/header_only/include/hello_header/: hello_header.hpp
cmake/best-practices/chapter3/object_lib/: CMakeLists.txt
cmake/best-practices/chapter3/object_lib/include/hello_object/: hello_object.hpp
cmake/best-practices/chapter3/shared_lib/: CMakeLists.txt
cmake/best-practices/chapter3/shared_lib/include/hello/: hello.hpp
cmake/best-practices/chapter3/shared_lib/src/: hello.cpp  internal.cpp  internal.hpp
cmake/best-practices/chapter3/src/: main.cpp
cmake/best-practices/chapter3/static_lib/: CMakeLists.txt
cmake/best-practices/chapter3/static_lib/include/hello/: hello.hpp
cmake/best-practices/chapter3/static_lib/src/: internal.cpp
cmake/chapter1/: CMakeLists.txt
cmake/chapter1/src/: main.cpp
cmake/cookbook/chapter1/c/: CMakeLists.txt  hello.c
cmake/cookbook/chapter1/cxx/: CMakeLists.txt  Message.cpp  Message.hpp  hello.cpp
cmake/cookbook/chapter1/cxx/recipe09/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  animal-farm.cpp
cmake/simple-lib/: CMakeLists.txt
concurrency-in-action/chapter1/: concurrent-hello.cc
concurrency-in-action/chapter2/: README.org
cphb/chapter3/: CMakeLists.txt  mm.cpp  sample.cpp
dpc++/: hello.cpp  simple-sycl-app.cpp
embedded/modern-cpp/: README.org  README.org~
embedded/modern-cpp/chapter2/: hello
functional-programming/chapter1/: line_imp.cpp  test.txt
functional-programming/chapter2/: average.cpp
hpc/cpp/: compile_commands.json  cxxoptsplay.cc  ex6point1.cc  object.cc  zero.cc  zeroprogram
hpc/cpp/prime/: compile_commands.json  prime.cc
libtorch/: CMakeLists.txt  Dockerfile  main.cpp
libtorch/docker/: docker-entrypoint.sh
libtorch/tutorials/basics/pytorch_basics/: CMakeLists.txt  main.cpp
openmpi/: CMakeLists.txt  FileRead.c  GhostExchange.cc  Makefile  MinWorkExample.c  MinWorkExampleMPI  README.org  README.org~  SendRecv.c  SynchronizedTimer.c  compile_commands.json  file.in  globalsums.c  hello.cpp  malloc2D.c  malloc2D.h  timer.c
openmpi/mpiio/: CMakeLists.txt  compile_commands.json  malloc2D.c  mpi_io_block2d.c  mpi_io_file_ops.c  mpi_io_file_ops.h
problem-solving/chapter1/: io.cc
torchplay/: CMakeLists.txt  main.cpp
torchplay/tutorials/basics/ffnn/: CMakeLists.txt
torchplay/tutorials/basics/ffnn/include/: neural_net.h
torchplay/tutorials/basics/ffnn/src/: main.cpp  neural_net.cpp
torchplay/tutorials/basics/pytorch_basics/: CMakeLists.txt  main.cpp
torchplay/tutorials/basics/pytorch_basics/model/: resnet18_scriptmodule.py
torchplay/utils/image_io/: CMakeLists.txt
torchplay/utils/image_io/src/: image_io.cpp
tour-of-cplusplus/chapter2/: CMakeLists.txt  Chapter2  Makefile  README.org  TutorialConfig.h.in  VectorClass.cc  compile_commands.json  enum.cpp  tutorial.cxx  union.cc  vector.cc
tour-of-cplusplus/chapter2/MathFunctions/: Makefile
